--- a/config.toml
+++ b/config.toml
@@ -183,11 +183,11 @@ enableEmoji = true
     title = "Courses"
     url = "/courses/"
     weight = 6
-  [[menu.header]]
-    name = "Lab"
-    title = "Lab"
-    url = "/lab/"
-    weight = 7
+ # [[menu.header]]
+ #  name = "Lab"
+ #  title = "Lab"
+ #   url = "/lab/"
+ #   weight = 7
     
   # Configure footer  
   # [[menu.footer]]
